# microsim

./: .gitignore  CLAUDE.md  pyproject.toml
microsim/: __init__.py  age_scope.py  gfr_equation.py  initialization_repository.py  nhanes_linear_risk_factor_model.py  nhanes_risk_model_repository.py  outcome_model_repository.py  person.py  person_factory.py  person_filter.py  person_filter_factory.py  population.py  population_factory.py  standardized_population.py  static_risk_factor_over_time_repository.py  statsmodel_linear_risk_factor_model.py  validation.py
microsim/common/: __init__.py  claude.md  data_loader.py  population_type.py
microsim/data/: fullyImputedDataset.dta
microsim/default_treatments/: __init__.py  claude.md  default_treatment_model_repository.py  default_treatments.py
microsim/outcomes/: __init__.py  ascvd_outcome_model.py  chronic_kidney_disease_model.py  chronic_kidney_disease_model_repository.py  ci_model.py  ci_model_repository.py  claude.md  cognition_model.py  cognition_model_repository.py  cognition_outcome.py  cv_model.py  cv_model_repository.py  death_model.py  death_model_repository.py  dementia_model.py  dementia_model_repository.py  diabetes_model.py  diabetes_model_repository.py  epilepsy_model.py  epilepsy_model_repository.py  mci_model.py  mci_model_repository.py  mi_partition_model.py  mi_partition_model_repository.py  non_cv_death_model.py  non_cv_model_repository.py  outcome.py  outcome_model_repository.py  outcome_prevalence_base.py  outcome_prevalence_model_repository.py  qaly_assignment_strategy.py  qaly_model_repository.py  (+13 more)
(+93 files in other folders)
