[tool.poetry]
name = "microsim"
version = "0.0.1"
description = "Open-source chronic disease simulation framework for population health"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.2.6"
pandas = "^2.2.0"
statsmodels = "^0.14.0"
scipy = "^1.16"
ipykernel = "^7.1.0"
matplotlib = "^3.10.7"
lifelines = "^0.30"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.8"
ipython = "^8.10.0"
black = "^22.3.0"

[tool.poetry.scripts]
test = "scripts.test:main"
lint = "scripts.lint:main"
format = "scripts.format:main"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
